--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "dependencies": { 
+    "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
